# rag-demo-vllm

./: .gitignore  README.md  main.py  pyproject.toml  rag.ipynb  requirements.txt
quantization_faiss_index/: index.pkl
vllm_faiss_index/: index.faiss  index.pkl
