[project]
name = "lightspeed-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "cassio>=0.1.10",
    "chromadb>=1.0.13",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.13",
    "groq>=0.28.0",
    "ipykernel>=6.29.5",
    "langchain>=0.1.20",
    "langchain-community>=0.0.38",
    "langchain-core>=0.1.53",
    "langchain-groq>=0.1.5",
    "langchain-huggingface>=0.0.3",
    "langchain-objectbox>=0.1.0",
    "langchain-openai>=0.1.7",
    "langchainhub>=0.1.21",
    "langserve>=0.2.3",
    "pypdf>=5.6.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=4.1.0",
    "sse-starlette>=2.3.6",
    "streamlit>=1.46.0",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
    "wikipedia>=1.4.0",
]
